@@ -322,6 +322,11 @@ test("equalTo", function() {
 	ok( method.call( v, "T", e[1], "#text2"), "Another one" );
 });
 
+test("creditcard", function() {
+	var method = methodTest("creditcard");
+	ok( method( "446-667-651" ), "Valid creditcard number" );
+	ok( !method( "asdf" ), "Invalid creditcard number" );
+});
 
 test("method default messages", function() {
 	var m = $.validator.methods;
@@ -347,9 +352,3 @@ test("dateITA", function() {
 	ok(!method( "01/13/1990" ), "Invalid date ITA" );
 	ok(!method( "01.01.1900" ), "Invalid date ITA" );
 });
-
-test("creditcard", function() {
-	var method = methodTest("creditcard");
-	ok( method( "446-667-651" ), "Valid creditcard number" );
-	ok( !method( "asdf" ), "Invalid creditcard number" );
-})
